# PROJECT_LEAGUE_AI

./: CMakeLists.txt
data/: allgamedata.json
include/: Ability.h  ActivePlayer.h  Champion.h  ChampionStats.h  LeagueAi.h  Rune.h  Runes.h  leagueai.h
src/: ActivePlayer.cpp  Champion.cpp  LeagueAi.cpp  Rune.cpp  Runes.cpp  leagueai.cpp  readpy.cpp
src/py/: readapi.py
